<resources>
    <string name="app_name">Help MG</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="account">Account</string>
    <string name="hi">Hi!</string>
    <string name="there_is_no_all_type_transaction_nat_this_month">There is no All Type transaction\nat This Month</string>
    <string name="you_can_add_transaction_below">You can add transaction below</string>
    <string name="no_transaction_yet">No Transaction Yet!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_in1">Sign In</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="amount">Amount</string>
    <string name="today">Today</string>
    <string name="update">Update</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="income">Income</string>
    <string name="net_amount">Net Amount</string>
    <string name="amount1">Amount</string>
    <string name="expense_income_report">Expense - Income Report</string>
    <string name="ratio">Ratio</string>
    <string name="category">Category</string>
    <string name="note">Note :</string>
    <string name="notes_here">Notes here...</string>
    <string name="amount3">Amount :</string>
    <string name="expense_transaction">Expense Transaction</string>
    <string name="sign_up">Sign Up</string>
    <string name="email1">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="already_have_an_accout">Already have an Accout?</string>
    <string name="log_in">Log In</string>
    <string name="forgot_npassword">Forgot\nPassword?</string>
    <string name="enter_your_email_address_to_reset_your_password_make_sure_you_use_a_verified_or_valid_email">Enter your email address to reset your password! Make sure you use a verified or valid email</string>
    <string name="submit">Submit</string>
    <string name="сhange_language" translatable="false">Сhange Language</string>
    <string name="change_avatar">Change Avatar</string>
</resources>