<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:src="@drawable/ic_forgot_password_amico"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/forgotPassTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginStart="36dp"
                android:layout_marginTop="-23dp"
                android:gravity="left"
                android:text="@string/forgot_npassword"
                android:textColor="#37474f"
                android:textSize="28sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/forgotPassDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPassTitle"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/enter_your_email_address_to_reset_your_password_make_sure_you_use_a_verified_or_valid_email"
                android:textColor="#7E7E7E"
                android:textSize="16dp"
                tools:ignore="RtlHardcoded,SpUsage,TextSizeCheck,TextContrastCheck" />

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPassDesc"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="36dp"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_baseline_person_outline_24"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/emailForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="#787878"
                    app:backgroundTint="#21000000"
                    tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgotPassBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/emailLayout"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:paddingTop="7dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBB86FC"
                app:cornerRadius="13dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>